--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <canvas id="canvas">
-    </canvas>
+    <canvas id="canvas"></canvas>
+    <input type="range" id="playhead" min="0" max="100">
 </body>
 
 </html>
