Implement simple custom range slider

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
 
 <body>
     <canvas id="canvas"></canvas>
-    <input type="range" id="playhead" min="0" max="100">
+    <div id="slider"
+         class="slider">
+        <div class="slider-indicator">
+        </div>
+    </div>
 </body>
 
 </html>
