Add fps counter

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,10 @@
 </head>
 
 <body>
-    <canvas id="canvas"></canvas>
-    <div id="slider"
-         class="slider">
-        <div class="slider-indicator">
-        </div>
+    <div id="canvas-container">
+    </div>
+    <div id="slider" class="slider">
+        <div class="slider-indicator"></div>
     </div>
 </body>
 
