Add circle slider stub

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,14 @@
 
 <body>
     <div id="canvas-container">
+        <div id="slider"
+             class="slider">
+            <div class="slider-indicator"></div>
+        </div>
     </div>
-    <div id="slider" class="slider">
-        <div class="slider-indicator"></div>
+    <div id="circle-slider" class="circle-slider">
+        <div id="circle-indicator"
+             class="circle-indicator"></div>
     </div>
 </body>
 
