Implement a simple frame timeline

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,20 @@
             <div class="slider-indicator"></div>
         </div>
     </div>
-    <div id="circle-slider" class="circle-slider">
+    <div id="circle-slider"
+         class="circle-slider">
         <div id="circle-indicator"
              class="circle-indicator"></div>
+    </div>
+    <div id="timeline"
+         class="timeline">
+        <!--
+        <canvas class="frame"></canvas>
+        <canvas class="frame"></canvas>
+        <canvas class="frame"></canvas>
+        <canvas class="frame"></canvas>
+        <canvas class="frame"></canvas>
+        -->
     </div>
 </body>
 
